--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <nova-transferencia (aoTransferir)="transferir($event)"></nova-transferencia>
-<app-extrato [transferencia]="transferencia"></app-extrato>
+<app-extrato></app-extrato>
 
