--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -5,7 +5,7 @@
     <div class="form-field">
       <label for="valor" class="form-field__label">Valor</label>
       <input
-        type="text"
+        type="number"
         id="valor"
         class="form-field__input"
         [(ngModel)]="valor"
